--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>React without CRA</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Car Brand Recognition - Beautiful React Demo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/react/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone/babel.min.js"></script>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Montserrat', Arial, sans-serif;
+        background: linear-gradient(120deg, #f8fafc 0%, #e0e7ff 100%);
+        min-height: 100vh;
+      }
+      header {
+        background: #1e293b;
+        color: #fff;
+        padding: 2rem 0 1.5rem 0;
+        text-align: center;
+        box-shadow: 0 2px 8px rgba(30,41,59,0.08);
+      }
+      header h1 {
+        margin: 0;
+        font-size: 2.5rem;
+        letter-spacing: 2px;
+      }
+      .container {
+        max-width: 500px;
+        margin: 2.5rem auto;
+        background: #fff;
+        border-radius: 18px;
+        box-shadow: 0 4px 24px rgba(30,41,59,0.10);
+        padding: 2.5rem 2rem 2rem 2rem;
+        text-align: center;
+      }
+      .car-logo {
+        width: 80px;
+        margin-bottom: 1.5rem;
+      }
+      .main-title {
+        font-size: 2rem;
+        color: #1e293b;
+        margin-bottom: 0.5rem;
+      }
+      .subtitle {
+        color: #64748b;
+        margin-bottom: 2rem;
+      }
+      .btn {
+        background: #6366f1;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        padding: 0.75rem 2rem;
+        font-size: 1rem;
+        font-weight: 700;
+        cursor: pointer;
+        transition: background 0.2s;
+        margin-top: 1.5rem;
+      }
+      .btn:hover {
+        background: #4f46e5;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-
+    <header>
+      <h1>Car Brand Recognition</h1>
+    </header>
+    <div class="container">
+      <img src="Mazali Logo.png" alt="Car Logo" class="car-logo" />
+      <div id="root"></div>
+    </div>
     <script type="text/babel">
       function App() {
-        return <h1>Hello, React without CRA!</h1>;
+        const [brand, setBrand] = React.useState("");
+        const [result, setResult] = React.useState(null);
+        function handleSubmit(e) {
+          e.preventDefault();
+          if (brand.trim()) {
+            setResult(`You entered: ${brand}`);
+          } else {
+            setResult(null);
+          }
+        }
+        return (
+          <>
+            <div className="main-title">Welcome!</div>
+            <div className="subtitle">Enter a car brand below and see the magic of React.</div>
+            <form onSubmit={handleSubmit}>
+              <input
+                type="text"
+                placeholder="Type a car brand..."
+                value={brand}
+                onChange={e => setBrand(e.target.value)}
+                style={{
+                  padding: '0.7rem 1rem',
+                  borderRadius: '8px',
+                  border: '1px solid #cbd5e1',
+                  fontSize: '1rem',
+                  width: '70%',
+                  marginBottom: '1rem',
+                  outline: 'none',
+                  boxSizing: 'border-box',
+                }}
+              />
+              <br />
+              <button className="btn" type="submit">Show Brand</button>
+            </form>
+            {result && (
+              <div style={{marginTop: '2rem', fontSize: '1.2rem', color: '#6366f1', fontWeight: 700}}>{result}</div>
+            )}
+          </>
+        );
       }
       ReactDOM.render(<App />, document.getElementById("root"));
     </script>
